Refactor InventoryAuditApp to valueOf and add availability count helper